--- a/.textlintrc
+++ b/.textlintrc
@@ -1,6 +1,15 @@
 {
   "filters": {},
   "rules": {
-    "preset-ja-technical-writing": true
-  }
+    "preset-ja-technical-writing": {
+      "ja-no-mixed-period": false
+    },
+    "prh": {
+        "rulePaths" :["prh.yml"]
+    }
+  },
+  "plugins": [
+    "asciidoc-loose",
+    "html"
+  ]
 }
