--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   - npm install
   - gem install bundler
   - bundle install
-  
+  - asciidoctor-pdf-cjk-kai_gen_gothic-install
 cache: bundler
 
 script:
